// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flyout does not render when the anchor is null 1`] = `null`;

exports[`Flyout renders 1`] = `
<div>
  <div
    className="container"
    style={
      Object {
        "left": -20,
        "stroke": "#efefef",
        "top": NaN,
        "visibility": "visible",
      }
    }
  >
    <div
      className="rounding4 contents maxDimensions minDimensions"
      tabIndex={-1}
    >
      <div
        className="border whiteBg white rounding4 innerContents maxDimensions minDimensions"
        style={
          Object {
            "maxWidth": 230,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Flyout renders as blue 1`] = `
<div>
  <div
    className="container"
    style={
      Object {
        "left": -20,
        "stroke": null,
        "top": NaN,
        "visibility": "visible",
      }
    }
  >
    <div
      className="rounding4 contents maxDimensions minDimensions"
      tabIndex={-1}
    >
      <div
        className="border blueBg blue rounding4 innerContents maxDimensions minDimensions"
        style={
          Object {
            "maxWidth": 230,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Flyout renders as error 1`] = `
<div>
  <div
    className="container"
    style={
      Object {
        "left": -20,
        "stroke": null,
        "top": NaN,
        "visibility": "visible",
      }
    }
  >
    <div
      className="rounding4 contents maxDimensions minDimensions"
      tabIndex={-1}
    >
      <div
        className="border redBg red rounding4 innerContents maxDimensions minDimensions"
        style={
          Object {
            "maxWidth": 230,
          }
        }
      />
    </div>
  </div>
</div>
`;
